--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -2615,7 +2615,6 @@ delete-question=Voleu suprimir la pregunta?
 delete-recurring-event=Esborra esdeveniment recurrent
 delete-refresh-token=Suprimeix el testimoni d'actualització
 delete-translations=Suprimeix les traduccions
-delete-type=Delete Type (Automatic Copy)
 delete-version=Esborra la versió
 delete-workflow-question=Eliminar el flux de treball?
 deleting-slas-will-reflect-on-report-data=La supressió dels SLA queda reflectida a les dades de l'informe. Aquesta acció no es pot desfer. Segur que el voleu suprimir permanentment?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=La supressió de aq
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=La supressió d'aquest esdeveniment cancel·larà la reunió amb els seus convidats. Voleu esborrar-ho?
 deletion-conflicts-with-a-modification=La supressió entra en conflicte amb una modificació.
 deletion-modification-conflict=Conflicte de modificació de supressió
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Si es marca aquesta opció, les operacions de supressió realitzades per als tipus de contingut s'exportaran al fitxer LAR.
 delimiter=Delimitador
 deliver=Envia
