--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -2615,7 +2615,6 @@ delete-question=Odstranit otázku? (Automatic Translation)
 delete-recurring-event=Smazat opakující se událost
 delete-refresh-token=Odstranit token aktualizace (Automatic Translation)
 delete-translations=Odstranit překlady (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Smazat verzi
 delete-workflow-question=Chcete odstranit pracovní postup? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Odstranění SLA se odrazí na datech sestavy. Tuto akci nelze vrátit zpět. Opravdu ji chcete trvale odstranit? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Smazáním událost
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Smazáním události dojde ke zrušení schůzek s vašimi hosty. Opravdu ji chcete smazat?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Konflikt změn odstranění (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Pokud je vybrána tato možnost, operace odstranění provedené pro typy obsahu budou exportovány do souboru LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=doručit (Automatic Translation)
