--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -2615,7 +2615,6 @@ delete-question=Vil du slette spørgsmålet? (Automatic Translation)
 delete-recurring-event=Slet tilbagevendende begivenhed (Automatic Translation)
 delete-refresh-token=Slet opdateringstoken (Automatic Translation)
 delete-translations=Slet oversættelser (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Slet Version
 delete-workflow-question=Skal arbejdsprocessen slettes? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Hvis du sletter SLA'er, reflekteres der over rapportdata. Denne handling kan ikke fortrydes. Er du sikker på, at du vil slette den permanent? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Hvis du sletter den
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Hvis du sletter denne begivenhed, annulleres mødet med dine gæster. Vil du slette? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Der op til sletning af ændringskonflikt (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Hvis denne indstilling vælges, eksporteres de slettehandlinger, der udføres for indholdstyper, til LAR-filen. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=levere (Automatic Translation)
