--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2615,7 +2615,6 @@ delete-question=Frage löschen?
 delete-recurring-event=Lösche sich wiederholenden Termin
 delete-refresh-token=Aktualisierungstoken löschen
 delete-translations=Übersetzungen entfernen
-delete-type=Delete Type (Automatic Copy)
 delete-version=Version löschen
 delete-workflow-question=Workflow löschen?
 deleting-slas-will-reflect-on-report-data=Das Löschen der SLAs wird sich auf die Berichtsdaten auswirken. Diese Aktion kann nicht rückgängig gemacht werden. Sind Sie sicher, dass Sie sie dauerhaft löschen wollen?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Durch das Löschen 
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Durch das Löschen dieses Termins wird das Meeting mit Ihren Gästen abgesagt. Möchten Sie den Termin löschen?
 deletion-conflicts-with-a-modification=Löschvorgang steht in Konflikt mit einer Änderung.
 deletion-modification-conflict=Löschung von Änderungskonflikt
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Ist diese Option ausgewählt, werden Löschvorgänge für Inhaltstypen in die LAR-Datei exportiert.
 delimiter=Trennzeichen
 deliver=Zustellen
