--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -2615,7 +2615,6 @@ delete-question=Διαγραφή ερώτησης; (Automatic Translation)
 delete-recurring-event=Διαγραφή επαναλαμβανόμενου συμβάντος (Automatic Translation)
 delete-refresh-token=Διαγραφή διακριτικού ανανέωσης (Automatic Translation)
 delete-translations=Διαγραφή μεταφράσεων (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Διαγραφή έκδοσης
 delete-workflow-question=Διαγραφή ροής εργασίας; (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Η διαγραφή των SLAs θα αντικατοπτρίζει τα δεδομένα της αναφοράς. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί. Είστε βέβαιοι ότι θέλετε να το διαγράψετε οριστικά; (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Η διαγραφή
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Η διαγραφή αυτής της εκδήλωσης θα ακυρώσει τη σύσκεψη με τους επισκέπτες σας. Θέλετε να διαγράψετε; (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Διένεξη τροποποίησης διαγραφής (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Εάν είναι επιλεγμένη αυτή η επιλογή, οι λειτουργίες διαγραφής που εκτελούνται για τύπους περιεχομένου θα εξαχθούν στο αρχείο LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=παραδίδω (Automatic Translation)
