--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -2615,7 +2615,6 @@ delete-question=¿Quiere eliminar la pregunta?
 delete-recurring-event=Eliminar evento periódico
 delete-refresh-token=Eliminar token de actualización
 delete-translations=Eliminar traducciones
-delete-type=Delete Type (Automatic Copy)
 delete-version=Borrar versión
 delete-workflow-question=¿Eliminar flujo de trabajo?
 deleting-slas-will-reflect-on-report-data=La eliminación de los SLA se reflejará en los datos de informes. Esta acción no se puede deshacer. ¿Está seguro de que quiere eliminarlo de forma permanente?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Eliminar este event
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Eliminar este evento cancelará el encuentro con sus invitados. ¿Desea continuar?
 deletion-conflicts-with-a-modification=La eliminación entra en conflicto con una modificación.
 deletion-modification-conflict=Conflicto de modificación de eliminación
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Si selecciona esta opción, las operaciones de eliminación realizadas para los tipos de contenido se exportarán al archivo LAR.
 delimiter=Delimitador
 deliver=Entregar
