--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -2615,7 +2615,6 @@ delete-question=Kas soovite küsimuse kustutada? (Automatic Translation)
 delete-recurring-event=Kustuta korduv sündmus (Automatic Translation)
 delete-refresh-token=Kustuta värskendamisluba (Automatic Translation)
 delete-translations=Kustuta tõlked (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Kustuta versioon (Automatic Translation)
 delete-workflow-question=Kas soovite töövoo kustutada? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=SLAde kustutamine kajastab aruandeandmeid. Seda toimingut ei saa tagasi võtta. Kas soovite kindlasti selle jäädavalt kustutada? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Selle sündmuse kus
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Selle sündmuse kustutamisel tühistatakse kohtumine teie külalistega. Kas soovite kustutada? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Kustutamise muutmise konflikt (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Selle suvandi valimisel eksporditakse sisutüüpide puhul tehtud kustutustoimingud LAR-faili. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=Pakkuda (Automatic Translation)
