--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -2615,7 +2615,6 @@ delete-question=प्रश्न हटाएं? (Automatic Translation)
 delete-recurring-event=पुनरावर्ती ईवेंट हटाएँ
 delete-refresh-token=ताज़ा टोकन हटाएं (Automatic Translation)
 delete-translations=अनुवाद हटाएं (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=वर्जन हटाएं (Automatic Translation)
 delete-workflow-question=वर्कफ़्लो हटाएं? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=एसएलए हटाने से रिपोर्ट डेटा पर चिंतन होगा। इस कार्रवाई को पूर्ववत नहीं किया जा सकता । क्या आप सुनिश्चित हैं कि आप इसे स्थायी रूप से हटाना चाहते हैं? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=इस ईवें
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=इस ईवेंट को हटाने से आपके मेहमानों के साथ मीटिंग रद्द हो जाएगी। क्या आप हटाना चाहेंगे?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=विलोपन संशोधन संघर्ष
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=यदि यह विकल्प चुना जाता है, तो सामग्री प्रकारों के लिए किए गए डिलीट ऑपरेशंस को LAR फ़ाइल को निर्यात किया जाएगा। (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=देना (Automatic Translation)
