--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -2615,7 +2615,6 @@ delete-question=Törli a kérdést?
 delete-recurring-event=Ismétlődő esemény törlése
 delete-refresh-token=Frissítési token törlése
 delete-translations=Fordítások törlése
-delete-type=Delete Type (Automatic Copy)
 delete-version=Verzió törlése
 delete-workflow-question=Törli a munkafolyamatot?
 deleting-slas-will-reflect-on-report-data=Az SLA-k törlése megnyilvánul a jelentés adatain is. Ez a művelet nem vonható vissza. Biztosan tartósan törölni kívánja?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Ennek az eseményne
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Ennek az eseménynek a törlése megszünteti a találkozót a vendégeiddel. Szeretnéd törölni?
 deletion-conflicts-with-a-modification=A törlés ütközik a módosítással.
 deletion-modification-conflict=Törlés – módosítás ütközése
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Ha kiválasztja ezt a lehetőséget, a tartalomtípusokon végzett törlési műveletek LAR-fájlba exportálódnak.
 delimiter=Elválasztójel
 deliver=Átadás
