--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -2615,7 +2615,6 @@ delete-question=Hapus pertanyaan? (Automatic Translation)
 delete-recurring-event=Menghapus Acara Berulang (Automatic Translation)
 delete-refresh-token=Hapus Token Refresh (Automatic Translation)
 delete-translations=Hapus Terjemahan (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Hapus Versi
 delete-workflow-question=Menghapus alur kerja? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Menghapus SLA akan merefleksikan data laporan. Aksi ini tak bisa diurungkan. Yakin ingin menghapusnya secara permanen? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Menghapus acara ini
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Menghapus acara ini akan membatalkan pertemuan dengan tamu anda.Apakah anda ingin menghapus?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Konflik modifikasi penghapusan (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Jika opsi ini dipilih, operasi penghapusan yang dilakukan untuk tipe konten akan diekspor ke file LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=Memberikan (Automatic Translation)
