--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -2615,7 +2615,6 @@ delete-question=Eliminare la domanda? (Automatic Translation)
 delete-recurring-event=Cancella Evento Ricorrente
 delete-refresh-token=Elimina token di aggiornamento (Automatic Translation)
 delete-translations=Elimina traduzioni (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Cancella Versione
 delete-workflow-question=Eliminare il flusso di lavoro? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=L'eliminazione degli SLA rifletterà sui dati dei report. Questa azione non può essere annullata. Eliminare definitivamente? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Cancellando questo 
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Cancellando questo evento l'appuntamento con i tuoi ospiti sarà disdetto. Vuoi cancellarlo?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Conflitto di modifica dell'eliminazione (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Se si sceglie questa opzione, saranno esportate nel file LAR anche le operazioni di cancellazione effettuate sulle varie tipologie di contenuto.
 delimiter=Delimiter (Automatic Copy)
 deliver=consegnare (Automatic Translation)
