--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -2615,7 +2615,6 @@ delete-question=האם למחוק שאלה? (Automatic Translation)
 delete-recurring-event=מחק אירוע חוזר
 delete-refresh-token=מחק אסימון רענון
 delete-translations=מחק תרגומים (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=מחק גרסה
 delete-workflow-question=למחוק את זרימת העבודה?
 deleting-slas-will-reflect-on-report-data=מחיקת SLAs תשקף את נתוני הדוח. אין אפשרות לבטל פעולה זו. האם אתה בטוח שברצונך למחוק אותו לצמיתות? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=מחיקת האיר
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=מחיקת האירוע הזה תבטל את הפגישה עם האורחים שלך. האם ברצונך למחוק?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=התנגשות שינוי מחיקה (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=אם נבחרה אפשרות זו, פעולות מחיקה המבוצעות על ידי סוגי תוכן ייוצאו לקובץ ה-LAR.
 delimiter=Delimiter (Automatic Copy)
 deliver=מסור
