--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -2615,7 +2615,6 @@ delete-question=Naikinti klausimą? (Automatic Translation)
 delete-recurring-event=Naikinti pasikartojantį įvykį (Automatic Translation)
 delete-refresh-token=Naikinti atnaujinimo atpažinimo ženklą (Automatic Translation)
 delete-translations=Naikinti vertimus (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Naikinti versiją (Automatic Translation)
 delete-workflow-question=Naikinti darbo eigą? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Naikinant SLA bus atsižvelgiama į ataskaitos duomenis. Šio veiksmo anuliuoti negalima. Ar tikrai norite jį panaikinti visam laikui? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Panaikinus šį įv
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Panaikinus šį įvykį bus atšauktas susitikimas su svečiais. Ar norite panaikinti? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Naikinimo modifikavimo konfliktas (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Jei ši parinktis pasirinkta, turinio tipų naikinimo operacijos bus eksportuotos į LAR failą. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=Pristatyti (Automatic Translation)
