--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -2615,7 +2615,6 @@ delete-question=Hapuskan soalan? (Automatic Translation)
 delete-recurring-event=Hapuskan Peristiwa Berulang (Automatic Translation)
 delete-refresh-token=Hapuskan Token Segar Semula (Automatic Translation)
 delete-translations=Hapuskan Terjemahan (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Hapus Versi (Automatic Translation)
 delete-workflow-question=Hapuskan aliran kerja? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Menghapuskan SLA akan mencerminkan data laporan. Tindakan ini tidak boleh dibuat asal. Adakah awda pasti hendak menghapuskannya secara kekal? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Menghapuskan acara 
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Menghapuskan acara ini akan membatalkan mesyuarat dengan tetamu anda. Adakah anda mahu menghapuskan? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Konflik Pengubahsuaian Penghakiman (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Jika opsyen ini dipilih, operasi hapus yang dilakukan untuk jenis kandungan akan dieksport ke fail LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=Menyampaikan (Automatic Translation)
