--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -2615,7 +2615,6 @@ delete-question=Slett spørsmål? (Automatic Translation)
 delete-recurring-event=Slett gjentagende arrangement
 delete-refresh-token=Slett oppfriskingnøkkel
 delete-translations=Slett oversettelser
-delete-type=Delete Type (Automatic Copy)
 delete-version=Slett versjon
 delete-workflow-question=Slette arbeidsflyt? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Sletting av serviceavtaler vil gjenspeile rapportdata. Denne handlingen kan ikke angres. Er du sikker på at du vil slette den for godt? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Når du slettet det
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Ved sletting av hendelsen vil møtet avlyses hos dine gjester. Ønsker du å slette?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Konflikt om endring av sletting (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Hvis dette alternativet er valgt, eksporteres sletteoperasjonene som utføres for innholdstyper, til LAR-filen. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=levere (Automatic Translation)
