--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -2615,7 +2615,6 @@ delete-question=Vraag verwijderen?
 delete-recurring-event=Terugkerende gebeurtenis verwijderen
 delete-refresh-token=Tokenvernieuwing verwijderen
 delete-translations=Vertalingen verwijderen
-delete-type=Delete Type (Automatic Copy)
 delete-version=Versie verwijderen
 delete-workflow-question=Workflow verwijderen?
 deleting-slas-will-reflect-on-report-data=De verwijdering van SLA's zal gevolgen hebben voor rapportgegevens. Deze bewerking kan niet ongedaan gemaakt worden. Weet u zeker dat u dit definitief wilt verwijderen?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Als u deze gebeurte
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Als u deze gebeurtenis verwijdert, wordt de bijeenkomst geannuleerd. Wilt u doorgaan?
 deletion-conflicts-with-a-modification=De verwijdering veroorzaakt een conflict met een wijziging.
 deletion-modification-conflict=Wijzigingsconflict verwijdering
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Als u deze optie selecteert, worden de bewerkingen voor verwijdering van inhoudtypes geëxporteerd naar het LAR-bestand.
 delimiter=Scheidingsteken
 deliver=Leveren
