--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -2615,7 +2615,6 @@ delete-question=Delete question? (Automatic Copy)
 delete-recurring-event=Delete Recurring Event (Automatic Copy)
 delete-refresh-token=Delete Refresh Token (Automatic Copy)
 delete-translations=Delete Translations (Automatic Copy)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Versie verwijderen
 delete-workflow-question=Delete workflow? (Automatic Copy)
 deleting-slas-will-reflect-on-report-data=Deleting SLAs will reflect on report data. This action cannot be undone. Are you sure you want to permanently delete it? (Automatic Copy)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Deleting this event
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Deleting this event will cancel the meeting with your guests. Would you like to delete? (Automatic Copy)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Deletion Modification Conflict (Automatic Copy)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=If this option is chosen, the delete operations performed for content types will be exported to the LAR file. (Automatic Copy)
 delimiter=Delimiter (Automatic Copy)
 deliver=Deliver (Automatic Copy)
