--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -2615,7 +2615,6 @@ delete-question=Czy usunąć pytanie? (Automatic Translation)
 delete-recurring-event=Usuń powtarzalne wydarzenie
 delete-refresh-token=Usuń token odświeżania (Automatic Translation)
 delete-translations=Usuń tłumaczenia (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Usuń wersję
 delete-workflow-question=Czy usunąć przepływ pracy? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Usunięcie SLA będzie odzwierciedlać dane raportu. Tej akcji nie można cofnąć. Czy na pewno chcesz go trwale usunąć? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Usuwając to wydarz
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Usuwając to wydarzenie anulujesz spotkanie ze swoimi gośćmi. Czy chcesz je usunąć?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Konflikt modyfikacji usuwania (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Jeśli ta opcja jest wybrana, operacje usuwania wykonywane dla typów zawartości zostaną wyeksportowane do pliku LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=Dostarczyć (Automatic Translation)
