--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -2615,7 +2615,6 @@ delete-question=Excluir pergunta? (Automatic Translation)
 delete-recurring-event=Remover evento recorrente
 delete-refresh-token=Excluir o token de atualização (Automatic Translation)
 delete-translations=Excluir traduções (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Eliminar Versão
 delete-workflow-question=Excluir o fluxo de trabalho? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=A exclusão dos SLAs refletirá nos dados do relatório. Esta ação não pode ser desfeita. Tem certeza que quer excluí-lo permanentemente? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=A remoção deste e
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Remover este evento irá cancelar a reunião com os seus convidados. Pretende continuar?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Conflito de modificação de exclusão (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Se essa opção for escolhida, as operações de exclusão realizadas para tipos de conteúdo serão exportadas para o arquivo LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=entregar (Automatic Translation)
