--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -2615,7 +2615,6 @@ delete-question=Ștergeți întrebarea? (Automatic Translation)
 delete-recurring-event=Ștergere eveniment recurent (Automatic Translation)
 delete-refresh-token=Ștergere simbol reîmprospătare (Automatic Translation)
 delete-translations=Ștergere traduceri (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Șterge Versiunea
 delete-workflow-question=Ștergeți fluxul de lucru? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Ștergerea SLA-uri va reflecta asupra datelor raportului. Această acțiune nu poate fi anulată. Sigur îl ștergeți definitiv? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Ștergerea acestui 
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Ștergerea acestui eveniment va anula întâlnirea cu oaspeții. Ștergeți? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Conflict modificare ștergere (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Dacă este aleasă această opțiune, operațiunile de ștergere efectuate pentru tipurile de conținut vor fi exportate în fișierul LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=livra (Automatic Translation)
