--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -2615,7 +2615,6 @@ delete-question=Odstrániť otázku? (Automatic Translation)
 delete-recurring-event=Zmazať opakujúcu sa udalosť
 delete-refresh-token=Odstrániť token obnovenia (Automatic Translation)
 delete-translations=Odstrániť preklady (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Vymaž verziu
 delete-workflow-question=Chcete odstrániť pracovný postup? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Odstránenie SLA sa odrazí na údajoch zostavy. Túto akciu nie je možné vrátiť späť. Naozaj ho chcete natrvalo odstrániť? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Vymazanie tejto uda
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Vymazaním udalosti zrušíte stretnutie s vašimi hosťami. Prajete si vymazať?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Odstránenie zmeny konfliktu (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Ak je vybratá táto možnosť, operácie odstránenia vykonané pre typy obsahu sa exportnú do súboru LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=doručiť (Automatic Translation)
