--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -2615,7 +2615,6 @@ delete-question=Ali želite izbrisati vprašanje? (Automatic Translation)
 delete-recurring-event=Brisanje ponavljajočega se dogodka (Automatic Translation)
 delete-refresh-token=Izbriši žeton za osvežitev (Automatic Translation)
 delete-translations=Brisanje prevodov (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Izbriši različico (Automatic Translation)
 delete-workflow-question=Ali želite izbrisati potek dela? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Brisanje SLA bo odražalo podatke o poročilih. Tega dejanja ni mogoče razveljaviti. Ali ste prepričani, da ga želite trajno izbrisati? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Če izbrišete ta d
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Če izbrišete ta dogodek, sestanek z gosti prekličete. Ali želite izbrisati? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Spor o spremembi brisanja (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Če je izbrana ta možnost, bodo operacije brisanja, izvedene za vrste vsebine, izvožene v datoteko LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=Dostaviti (Automatic Translation)
