--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -2615,7 +2615,6 @@ delete-question=Ta bort fråga?
 delete-recurring-event=Ta bort återkommande händelse
 delete-refresh-token=Ta bort uppdateringstoken
 delete-translations=Ta bort översättningar
-delete-type=Delete Type (Automatic Copy)
 delete-version=Ta bort version
 delete-workflow-question=Vill du ta bort arbetsflödet?
 deleting-slas-will-reflect-on-report-data=Om du tar bort SLA:er påverkas rapportdata. Den här åtgärden kan inte ångras. Vill du verkligen ta bort den permanent?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Om du tar bort den 
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Om du tar bort den här händelsen avbryts mötet med dina gäster. Vill du ta bort den?
 deletion-conflicts-with-a-modification=Borttagning i konflikt med en ändring.
 deletion-modification-conflict=Modifieringskonflikt för borttagning
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Om det här alternativet väljs kommer borttagningsåtgärderna som utförs för innehållstyper att exporteras till LAR-filen.
 delimiter=Avgränsare
 deliver=Leverera
