--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -2615,7 +2615,6 @@ delete-question=Delete question? (Automatic Copy)
 delete-recurring-event=தொடர் நிகழ்வை மாற்றவும்
 delete-refresh-token=Refresh டோக்கனை நீக்கு
 delete-translations=Delete Translations (Automatic Copy)
-delete-type=Delete Type (Automatic Copy)
 delete-version=பதிப்பு நீக்க
 delete-workflow-question=Workflow-வை நீக்கவா?
 deleting-slas-will-reflect-on-report-data=Deleting SLAs will reflect on report data. This action cannot be undone. Are you sure you want to permanently delete it? (Automatic Copy)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=இந்த நி
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=இந்த நிகழ்வை நீக்குவது உங்கள் Guest-களுடன் சந்திப்பை ரத்து செய்யும். நீக்க விரும்புகிறீர்களா?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Deletion Modification Conflict (Automatic Copy)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=இந்த விருப்பத்தை தேர்வு செய்தால், content types-களில் செய்யப்படும் delete operations கள், LAR ஃபைலிற்கு ஏற்றுமதி செய்யப்படும்.
 delimiter=Delimiter (Automatic Copy)
 deliver=Deliver (Automatic Copy)
