--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -2615,7 +2615,6 @@ delete-question=Soruyu silmek mi? (Automatic Translation)
 delete-recurring-event=Yinelenen Olayı Sil (Automatic Translation)
 delete-refresh-token=Yenileme Belirtecünü Sil (Automatic Translation)
 delete-translations=Çevirileri Sil (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Sürümü Sil (Automatic Translation)
 delete-workflow-question=İş akışı silinsin mi? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=SLA'ların silinmeleri rapor verilerine yansıtılır. Bu eylem geri alınamaz. Kalıcı olarak silmek istediğinizden emin misiniz? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Bu etkinliğin sili
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Bu etkinliğin silinmeleri konuklarınızla olan toplantıyı iptal eder. Silmek ister misiniz? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Silme Modifikasyonu Çakışması (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Bu seçenek seçilirse, içerik türleri için gerçekleştirilen silme işlemleri LAR dosyasına dışa aktarılır. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=teslim etmek (Automatic Translation)
