--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -2615,7 +2615,6 @@ delete-question=Вилучити запитання? (Automatic Translation)
 delete-recurring-event=Видалити повторювану подію (Automatic Translation)
 delete-refresh-token=Видалити маркер оновлення (Automatic Translation)
 delete-translations=Видалити переклади (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Видалити версію (Automatic Translation)
 delete-workflow-question=Видалити робочий цикл? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Видалення slas буде відображатися на даних звіту. Цю дію не можна скасувати. Справді остаточно видалити його? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Видалення 
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Видалення цієї події призведе до скасування наради з гостями. Видалити? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Конфлікт змін видалення (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Якщо буде позначено цей пункт, операції з видалення, виконані для типів вмісту, буде експортовано до файла LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=Доставити (Automatic Translation)
