--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -2615,7 +2615,6 @@ delete-question=Xóa câu hỏi? (Automatic Translation)
 delete-recurring-event=Xóa sự kiện định kỳ (Automatic Translation)
 delete-refresh-token=Xóa Bỏ Mã thông báo Làm mới (Automatic Translation)
 delete-translations=Xóa bản dịch (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Xóa phiên bản
 delete-workflow-question=Xóa dòng công việc? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Xóa SLA sẽ phản ánh dữ liệu báo cáo. Hành động này không thể hoàn tác. Bạn có chắc chắn muốn xóa bỏ vĩnh viễn nó không? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Việc xóa sự ki
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Việc xóa sự kiện này sẽ hủy cuộc họp với khách của bạn. Bạn có muốn xóa bỏ không? (Automatic Translation)
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Xóa xung đột sửa đổi (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Nếu tùy chọn này được chọn, các thao tác xóa được thực hiện cho kiểu nội dung sẽ được xuất sang tệp LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=giải thoát (Automatic Translation)
