--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -2615,7 +2615,6 @@ delete-question=Supprimer la question ?
 delete-recurring-event=Supprimer les évènements récurrents
 delete-refresh-token=Supprimer le jeton d'actualisation
 delete-translations=Supprimer les traductions
-delete-type=Delete Type (Automatic Copy)
 delete-version=Supprimer cette version
 delete-workflow-question=Supprimer le flux de travail ?
 deleting-slas-will-reflect-on-report-data=Supprimer des SLA a une répercussion sur les données du rapport. Cette action ne peut être annulée. Voulez-vous vraiment le supprimer définitivement ?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Effacer cet événe
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Effacer cet évènement annulera la rencontre avec vos invités. Voulez-vous vraiment l'effacer ?
 deletion-conflicts-with-a-modification=La suppression entre en conflit avec une modification.
 deletion-modification-conflict=Conflit de modification de suppression
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Si cette option est choisie, les opérations de suppression effectuées pour les types de contenu seront exportées vers le fichier LAR.
 delimiter=Délimiteur
 deliver=Livrer
