--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -2615,7 +2615,6 @@ delete-question=Excluir pergunta?
 delete-recurring-event=Excluir evento recorrente
 delete-refresh-token=Excluir o Token de Atualização
 delete-translations=Excluir Transações
-delete-type=Delete Type (Automatic Copy)
 delete-version=Excluir versão
 delete-workflow-question=Excluir fluxo de trabalho?
 deleting-slas-will-reflect-on-report-data=A exclusão de SLAs será refletida nos dados do relatório. Esta ação não pode ser desfeita. Tem certeza que deseja excluí-lo permanentemente?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=A exclusão deste e
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Excluindo esse evento será cancelada a reunião com seus convidados. Você gostaria de excluí-lo?
 deletion-conflicts-with-a-modification=Excluir conflitos com uma modificação.
 deletion-modification-conflict=Conflitos de modificação de exclusão
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Se esta opção for escolhida, a operação de exclusão executada para os tipos de conteúdo será exportada para o arquivo LAR.
 delimiter=Delimitador
 deliver=Entregar
