--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -2615,7 +2615,6 @@ delete-question=Удалить вопрос? (Automatic Translation)
 delete-recurring-event=Удалить повторяющееся событие
 delete-refresh-token=Удалить токен Обновления (Automatic Translation)
 delete-translations=Удаление переводов (Automatic Translation)
-delete-type=Delete Type (Automatic Copy)
 delete-version=Удалить версию
 delete-workflow-question=Удалить рабочий процесс? (Automatic Translation)
 deleting-slas-will-reflect-on-report-data=Удаление SAS будет отражать данные отчета. Это действие не может быть отменено. Вы уверены, что хотите навсегда удалить его? (Automatic Translation)
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Удаляя это
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Удаляя это событие, вы отмените встречу с вашими гостями. Вы уверены, что хотите удалить?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification. (Automatic Copy)
 deletion-modification-conflict=Конфликт изменения удаления (Automatic Translation)
+deletion-type=Deletion Type (Automatic Copy)
 deletions-help-export=Если эта опция выбрана, операции удаления, выполняемые для типов содержимого, будут экспортироваться в файл LAR. (Automatic Translation)
 delimiter=Delimiter (Automatic Copy)
 deliver=доставлять (Automatic Translation)
